#### Sound Emulation Library ####
project(libemu)
cmake_minimum_required(VERSION 2.8)


option(SNDEMU_ALL "build all sound devices (overrides other selections)" ON)
option(SNDEMU_SN76496_ALL "Sound Device SN76496: all cores" OFF)
#option(SNDEMU_SN76496_MAME "Sound Device SN76496: MAME core" OFF)
#option(SNDEMU_SN76496_MAXIM "Sound Device SN76496: Maxim core" OFF)
option(SNDEMU_YM2413_ALL "Sound Device YM2413: all cores" OFF)
#option(SNDEMU_YM2413_MAME "Sound Device YM2413: MAME core" OFF)
#option(SNDEMU_YM2413_EMU "Sound Device YM2413: EMU2413 core" OFF)
option(SNDEMU_YM2612_ALL "Sound Device YM2612: all cores" OFF)
#option(SNDEMU_YM2612_MAME "Sound Device YM2413: MAME core" OFF)
#option(SNDEMU_YM2612_GENS "Sound Device YM2413: Gens core" OFF)
option(SNDEMU_YM2151_ALL "Sound Device YM2151: all cores" OFF)
option(SNDEMU_SEGAPCM_ALL "Sound Device SegaPCM: all cores" OFF)
option(SNDEMU_RF5C68_ALL "Sound Device RF5C68: all cores" OFF)
#option(SNDEMU_RF5C68_MAME "Sound Device RF5C68: MAME core" OFF)
#option(SNDEMU_RF5C68_GENS "Sound Device RF5C68: Gens core" OFF)
option(SNDEMU_YM2203_ALL "Sound Device YM2203: all cores (Note: requires AY8910)" OFF)
option(SNDEMU_YM2608_ALL "Sound Device YM2608: all cores (Note: requires AY8910)" OFF)
option(SNDEMU_YM2610_ALL "Sound Device YM2610: all cores (Note: requires AY8910)" OFF)
option(SNDEMU_YM3812_ALL "Sound Device YM3812: all cores" OFF)
option(SNDEMU_YM3526_ALL "Sound Device YM3526: all cores" OFF)
option(SNDEMU_Y8950_ALL "Sound Device Y8950: all cores" OFF)
option(SNDEMU_YMF262_ALL "Sound Device YMF262: all cores" OFF)
option(SNDEMU_YMF278B_ALL "Sound Device YMF278B: all cores (Note: requires YMF262)" OFF)
option(SNDEMU_YMZ280B_ALL "Sound Device YMZ280B: all cores" OFF)
option(SNDEMU_YMF271_ALL "Sound Device YMF271: all cores" OFF)
option(SNDEMU_AY8910_ALL "Sound Device AY8910: all cores" OFF)
#option(SNDEMU_AY8910_MAME "Sound Device AY8910: MAME core" OFF)
#option(SNDEMU_AY8910_EMU "Sound Device AY8910: EMU2149 core" OFF)
option(SNDEMU_PWM_ALL "Sound Device PWM: all cores" OFF)
option(SNDEMU_GAMEBOY_ALL "Sound Device GameBoy DMG: all cores" OFF)
option(SNDEMU_NESAPU_ALL "Sound Device NES APU: all cores" OFF)
#option(SNDEMU_NESAPU_MAME "Sound Device NESAPU: MAME core" OFF)
#option(SNDEMU_NESAPU_NSFPLAY "Sound Device NESAPU: NSFPlay core" OFF)
option(SNDEMU_MULTIPCM_ALL "Sound Device MultiPCM: all cores" OFF)
option(SNDEMU_UPD7759_ALL "Sound Device uPD7759: all cores" OFF)
option(SNDEMU_OKIM6258_ALL "Sound Device OKI MSM6258: all cores" OFF)
option(SNDEMU_OKIM6295_ALL "Sound Device OKI MSM6295: all cores" OFF)
option(SNDEMU_K051649_ALL "Sound Device K051649: all cores" OFF)
option(SNDEMU_K054539_ALL "Sound Device K054539: all cores" OFF)
option(SNDEMU_C6280_ALL "Sound Device HuC6280: all cores" OFF)
#option(SNDEMU_C6280_MAME "Sound Device HuC6280: MAME core" OFF)
#option(SNDEMU_C6280_MAXIM "Sound Device HuC6280: Ootake core" OFF)
option(SNDEMU_C140_ALL "Sound Device C140: all cores" OFF)
option(SNDEMU_K053260_ALL "Sound Device K053260: all cores" OFF)
option(SNDEMU_POKEY_ALL "Sound Device POKEY: all cores" OFF)
option(SNDEMU_QSOUND_ALL "Sound Device QSound: all cores" OFF)
option(SNDEMU_SCSP_ALL "Sound Device SCSP: all cores" OFF)
option(SNDEMU_WSWAN_ALL "Sound Device WonderSwan: all cores" OFF)
option(SNDEMU_VBOY_VSU_ALL "Sound Device VirutalBoy VSU: all cores" OFF)
option(SNDEMU_SAA1099_ALL "Sound Device SAA1099: all cores" OFF)
option(SNDEMU_ES5503_ALL "Sound Device ES5503: all cores" OFF)
option(SNDEMU_ES5506_ALL "Sound Device ES5505/ES5506: all cores" OFF)
option(SNDEMU_X1_010_ALL "Sound Device X1-010: all cores" OFF)
option(SNDEMU_C352_ALL "Sound Device C352: all cores" OFF)
option(SNDEMU_GA20_ALL "Sound Device Irem GA20: all cores" OFF)

# enable sound device selection
set(EMU_DEFS "SNDDEV_SELECT")

if(SNDEMU_ALL)
	# turn all devices on
	set(SNDEMU_SN76496_ALL ON)
	set(SNDEMU_YM2413_ALL ON)
	set(SNDEMU_YM2612_ALL ON)
	set(SNDEMU_YM2151_ALL ON)
	set(SNDEMU_SEGAPCM_ALL ON)
	set(SNDEMU_RF5C68_ALL ON)
	set(SNDEMU_YM2203_ALL ON)
	set(SNDEMU_YM2608_ALL ON)
	set(SNDEMU_YM2610_ALL ON)
	set(SNDEMU_YM3812_ALL ON)
	set(SNDEMU_YM3526_ALL ON)
	set(SNDEMU_Y8950_ALL ON)
	set(SNDEMU_YMF262_ALL ON)
	set(SNDEMU_YMF278B_ALL ON)
	set(SNDEMU_YMZ280B_ALL ON)
	set(SNDEMU_YMF271_ALL ON)
	set(SNDEMU_AY8910_ALL ON)
	set(SNDEMU_PWM_ALL ON)
	set(SNDEMU_GAMEBOY_ALL ON)
	set(SNDEMU_NESAPU_ALL ON)
	set(SNDEMU_MULTIPCM_ALL ON)
	set(SNDEMU_UPD7759_ALL ON)
	set(SNDEMU_OKIM6258_ALL ON)
	set(SNDEMU_OKIM6295_ALL ON)
	set(SNDEMU_K051649_ALL ON)
	set(SNDEMU_K054539_ALL ON)
	set(SNDEMU_C6280_ALL ON)
	set(SNDEMU_C140_ALL ON)
	set(SNDEMU_K053260_ALL ON)
	set(SNDEMU_POKEY_ALL ON)
	set(SNDEMU_QSOUND_ALL ON)
	set(SNDEMU_SCSP_ALL ON)
	set(SNDEMU_WSWAN_ALL ON)
	set(SNDEMU_VBOY_VSU_ALL ON)
	set(SNDEMU_SAA1099_ALL ON)
	set(SNDEMU_ES5503_ALL ON)
	set(SNDEMU_ES5506_ALL ON)
	set(SNDEMU_X1_010_ALL ON)
	set(SNDEMU_C352_ALL ON)
	set(SNDEMU_GA20_ALL ON)
endif()


set(EMU_FILES
	SoundEmu.c
	Resampler.c
	panning.c
)

if(SNDEMU_SN76496_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_SN76496")
	set(EMU_FILES ${EMU_FILES} cores/sn764intf.c)
	set(EMU_FILES ${EMU_FILES} cores/sn76496.c)
	set(EMU_FILES ${EMU_FILES} cores/sn76489.c)
endif()
if(SNDEMU_YM2413_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_YM2413")
	set(EMU_FILES ${EMU_FILES} cores/2413intf.c)
	set(EMU_FILES ${EMU_FILES} cores/emu2413.c)
	set(EMU_FILES ${EMU_FILES} cores/ym2413.c)
endif()
if(SNDEMU_YM2612_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_YM2612")
	set(EMU_FILES ${EMU_FILES} cores/2612intf.c)
	set(EMU_FILES ${EMU_FILES} cores/fmopn2612.c)
	set(EMU_FILES ${EMU_FILES} cores/ym2612.c)
endif()
if(SNDEMU_YM2151_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_YM2151")
	set(EMU_FILES ${EMU_FILES} cores/ym2151.c)
endif()
if(SNDEMU_SEGAPCM_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_SEGAPCM")
	set(EMU_FILES ${EMU_FILES} cores/segapcm.c)
endif()
if(SNDEMU_RF5C68_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_RF5C68")
	set(EMU_FILES ${EMU_FILES} cores/rf5cintf.c)
	set(EMU_FILES ${EMU_FILES} cores/rf5c68.c)
	set(EMU_FILES ${EMU_FILES} cores/scd_pcm.c)
endif()
if(SNDEMU_YM2203_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_YM2203")
	set(EMU_FILES ${EMU_FILES} cores/opnintf.c)
	set(EMU_FILES ${EMU_FILES} cores/fmopn.c)
endif()
if(SNDEMU_YM2608_ALL OR SNDEMU_YM2610_ALL)
	if(SNDEMU_YM2608_ALL)
		set(EMU_DEFS ${EMU_DEFS} " SNDDEV_YM2608")
	endif()
	if(SNDEMU_YM2610_ALL)
		set(EMU_DEFS ${EMU_DEFS} " SNDDEV_YM2610")
	endif()
	set(EMU_FILES ${EMU_FILES} cores/opnintf.c)
	set(EMU_FILES ${EMU_FILES} cores/fmopn.c)
	set(EMU_FILES ${EMU_FILES} cores/ymdeltat.c)
endif()
if(SNDEMU_YM3812_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_YM3812")
	set(EMU_FILES ${EMU_FILES} cores/oplintf.c)
	set(EMU_FILES ${EMU_FILES} cores/fmopl.c)
	set(EMU_FILES ${EMU_FILES} cores/adlibemu_opl2.c)
	set(EMU_FILES ${EMU_FILES} cores/nukedopl.c)
endif()
if(SNDEMU_YM3526_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_YM3526")
	set(EMU_FILES ${EMU_FILES} cores/oplintf.c)
	set(EMU_FILES ${EMU_FILES} cores/fmopl.c)
endif()
if(SNDEMU_Y8950_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_Y8950")
	set(EMU_FILES ${EMU_FILES} cores/oplintf.c)
	set(EMU_FILES ${EMU_FILES} cores/fmopl.c)
	set(EMU_FILES ${EMU_FILES} cores/ymdeltat.c)
endif()
if(SNDEMU_YMF262_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_YMF262")
	set(EMU_FILES ${EMU_FILES} cores/262intf.c)
	set(EMU_FILES ${EMU_FILES} cores/ymf262.c)
	set(EMU_FILES ${EMU_FILES} cores/adlibemu_opl3.c)
	set(EMU_FILES ${EMU_FILES} cores/nukedopl.c)
endif()
if(SNDEMU_YMF278B_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_YMF278B")
	set(EMU_FILES ${EMU_FILES} cores/ymf278b.c)
endif()
if(SNDEMU_YMZ280B_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_YMZ280B")
	set(EMU_FILES ${EMU_FILES} cores/ymz280b.c)
endif()
if(SNDEMU_YMF271_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_YMF271")
	set(EMU_FILES ${EMU_FILES} cores/ymf271.c)
endif()
if(SNDEMU_AY8910_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_AY8910")
	set(EMU_FILES ${EMU_FILES} cores/ayintf.c)
	set(EMU_FILES ${EMU_FILES} cores/emu2149.c)
	set(EMU_FILES ${EMU_FILES} cores/ay8910.c)
endif()
if(SNDEMU_PWM_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_PWM")
	set(EMU_FILES ${EMU_FILES} cores/pwm.c)
endif()
if(SNDEMU_GAMEBOY_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_GAMEBOY")
	set(EMU_FILES ${EMU_FILES} cores/gb.c)
endif()
if(SNDEMU_NESAPU_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_NES_APU")
	set(EMU_FILES ${EMU_FILES} cores/nesintf.c)
	set(EMU_FILES ${EMU_FILES} cores/nes_apu.c)
	set(EMU_FILES ${EMU_FILES} cores/np_nes_apu.c cores/np_nes_dmc.c)
	set(EMU_FILES ${EMU_FILES} cores/np_nes_fds.c)
endif()
if(SNDEMU_MULTIPCM_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_MULTIPCM")
	set(EMU_FILES ${EMU_FILES} cores/multipcm.c)
endif()
if(SNDEMU_UPD7759_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_UPD7759")
	set(EMU_FILES ${EMU_FILES} cores/upd7759.c)
endif()
if(SNDEMU_OKIM6258_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_OKIM6258")
	set(EMU_FILES ${EMU_FILES} cores/okim6258.c)
endif()
if(SNDEMU_OKIM6295_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_OKIM6295")
	set(EMU_FILES ${EMU_FILES} cores/okim6295.c cores/okiadpcm.c)
endif()
if(SNDEMU_K051649_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_K051649")
	set(EMU_FILES ${EMU_FILES} cores/k051649.c)
endif()
if(SNDEMU_K054539_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_K054539")
	set(EMU_FILES ${EMU_FILES} cores/k054539.c)
endif()
if(SNDEMU_C6280_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_C6280")
	set(EMU_FILES ${EMU_FILES} cores/c6280intf.c)
	set(EMU_FILES ${EMU_FILES} cores/c6280_mame.c)
	set(EMU_FILES ${EMU_FILES} cores/Ootake_PSG.c)
endif()
if(SNDEMU_C140_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_C140")
	set(EMU_FILES ${EMU_FILES} cores/c140.c)
endif()
if(SNDEMU_K053260_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_K053260")
	set(EMU_FILES ${EMU_FILES} cores/k053260.c)
endif()
if(SNDEMU_POKEY_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_POKEY")
	set(EMU_FILES ${EMU_FILES} cores/pokey.c)
endif()
if(SNDEMU_QSOUND_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_QSOUND")
	set(EMU_FILES ${EMU_FILES} cores/qsound.c)
endif()
if(SNDEMU_SCSP_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_SCSP")
	set(EMU_FILES ${EMU_FILES} cores/scsp.c cores/scspdsp.c)
endif()
if(SNDEMU_WSWAN_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_WSWAN")
	set(EMU_FILES ${EMU_FILES} cores/ws_audio.c)
endif()
if(SNDEMU_VBOY_VSU_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_VBOY_VSU")
	set(EMU_FILES ${EMU_FILES} cores/vsu.c)
endif()
if(SNDEMU_SAA1099_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_SAA1099")
	set(EMU_FILES ${EMU_FILES} cores/saa1099.c)
endif()
if(SNDEMU_ES5503_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_ES5503")
	set(EMU_FILES ${EMU_FILES} cores/es5503.c)
endif()
if(SNDEMU_ES5506_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_ES5506")
	set(EMU_FILES ${EMU_FILES} cores/es5506.c)
endif()
if(SNDEMU_X1_010_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_X1_010")
	set(EMU_FILES ${EMU_FILES} cores/x1_010.c)
endif()
if(SNDEMU_C352_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_C352")
	set(EMU_FILES ${EMU_FILES} cores/c352.c)
endif()
if(SNDEMU_GA20_ALL)
	set(EMU_DEFS ${EMU_DEFS} " SNDDEV_GA20")
	set(EMU_FILES ${EMU_FILES} cores/iremga20.c)
endif()


add_library(${PROJECT_NAME} STATIC ${EMU_FILES})

target_compile_definitions(${PROJECT_NAME} PUBLIC ${EMU_DEFS})

target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR})

target_link_libraries(${PROJECT_NAME} PRIVATE m)
